--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- links -->
     <nav>
       <a href="index.html">About</a>
-      <a href="new-properties.html">New Properties</a>
+      <a href="older-listings.html">Older Listings</a>
       <a href="real-estate-listings.html">Listings</a>
       <a href="market-report.html">Market Report</a>
       <a href="contact.html">Contact</a>
