Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
   </section>
 
   <footer>
-    &copy; 2014 Exceptional Realty. All Rights Reserved.
+    <address>
+      Visit us at the following page Realty Group.com<br>
+    </address>
+    <!-- &copy; 2014 Exceptional Realty. All Rights Reserved. -->
   </footer>
   </body>
 </html>
