Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </nav>
   </header>
 
+  <main>
   <section id="featured-property">
     <figure>
       <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
@@ -51,7 +52,7 @@
   </figure>
 
   </section>
-
+</main>
   <footer>
     <address>
       Visit us at the following page Realty Group.com<br>
