--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <header>
       <h1>Exceptional</h1>
       <h2>Realty Group</h2>
+  <main>
 
-    <!-- links -->
+  <section id="navigation links">
     <nav>
       <a href="index.html">About</a>
       <a href="new-properties.html">New Properties</a>
