--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <header>
       <h1>Exceptional</h1>
       <h2>Realty Group</h2>
-  <main>
 
-  <section id="navigation links">
+
+  <section id="featured-property">
     <nav>
       <a href="index.html">About</a>
       <a href="new-properties.html">New Properties</a>
